layout bug

--- a/src/sass/bitchk.scss
+++ b/src/sass/bitchk.scss
@@ -1,3 +1,7 @@
 .button-clear {
     background: none !important;
 }
+
+.tab-main {
+    background-color: white;
+}
